fixing collapsed menu alignment

--- a/src/less/style.less
+++ b/src/less/style.less
@@ -108,7 +108,7 @@ nav ul {
 		nav {
 			margin-top: 0;
 			position: absolute;
-			top: 12px;
+			top: 22px;
 			left: 300px;
 		}
 	}
@@ -170,8 +170,11 @@ nav ul {
 	.cartInfo {
 		border-radius: @border-radius-base !important;
 	}
-
 }
+.cartBlock.onCollapsedMenu:hover {
+	top: 12px;
+}
+
 
 /* END CART INFO*/
 
